# lynkmesh-open

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  post_scheduler.yml  posts.json  tweet_worker.py
docs/: agent_context_engine.md  agent_review_workflow.md  case_study_template.md  demo_script.md  github_public_profile.md  lynkmesh_protocol.md  mcp_mesh_context_release_notes_v4.4.1.md  positioning.md  public_alpha_criteria.md  public_faq.md  public_release_notes_v0.1.md  quickstart.md  support_matrix.md  try_in_5_minutes.md
evals/before_after/: README.md
evals/before_after/metrics/: before_after_metrics.schema.json  sample_after_metrics.json  sample_before_metrics.json
evals/before_after/runs/: after_with_lynkmesh.template.md  before_without_lynkmesh.template.md
evals/before_after/scenarios/: architecture_impact_baseline.md
evals/before_after/screenshots/: README.md
evals/before_after/summaries/: comparison_summary.template.md
lynkmesh/: __main__.py  config.py
lynkmesh/cli/: __init__.py  main.py
lynkmesh/core/: graph_cache.py  graph_core.py  graph_serializer.py  graph_version.py  incremental_diff.py  ir_core.py  symbol_registry.py  type_registry.py
lynkmesh/graph/: call_resolver.py  graph_builder.py  graph_enricher.py  graph_mapper.py  graph_validator.py
lynkmesh/ingestion/: file_scanner.py  ir_normalizer.py  language_loader.py  parser_engine.py
lynkmesh/ingestion/php_bridge/: composer.json  (+2 more)
lynkmesh/pipeline/: INCREMENTAL_PIPELINE_API.md  incremental_pipeline.py  orchestrator.py
(+68 files in other folders)
